moved 'add rule button' to react

--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -70,10 +70,8 @@
         {% endfor %}
     </ul>
 
-    <div class="form-group text-right">
-      <button type="button" id="add-pricing-rule" class="btn btn-success">
-        <i class="fa fa-plus"></i> {% trans %}adminDashboard.pricing.addRule{% endtrans %}
-      </button>
+    <div class="form-group text-right" id="pricing-rule-set-actions">
+      {# rendered by React #}
     </div>
 
     <button type="submit" class="btn btn-block btn-lg btn-primary">
