added: UI to add rules per order and per point

--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -70,7 +70,7 @@
         {% endfor %}
     </ul>
 
-    <div class="form-group text-right" id="pricing-rule-set-actions">
+    <div class="form-group" id="pricing-rule-set-actions">
       {# rendered by React #}
     </div>
 
