feat: base beta form setup for stores

--- a/templates/store/deliveries/beta_new.html.twig
+++ b/templates/store/deliveries/beta_new.html.twig
@@ -67,7 +67,8 @@
         storeId: store.id,
         deliveryId: delivery.id,
         order: order,
-        trackingLink: tracking_link
+        trackingLink: tracking_link,
+        isDispatcher: isDispatcher
       }) 
   }}></div>
 {% endblock %}
