--- a/templates/form/pricing_rule_set.html.twig
+++ b/templates/form/pricing_rule_set.html.twig
@@ -37,9 +37,9 @@
       {% endif %}
       >
       <div class="d-flex align-items-center">
-        {{ form_label(form.price, null, { label_attr: { class: 'w-25' } }) }}
+        {{ form_label(form.price, null, { label_attr: { class: 'delivery-pricing-ruleset__rule__price__label w-25' } }) }}
         <div class="w-75">
-          {{ form_widget(form.price) }}
+          {{ form_widget(form.price, { attr: { class: 'delivery-pricing-ruleset__rule__price__input' } }) }}
         </div>
       </div>
     </div>
