Change version number viz.
- Remove changelog widget.
- Show current version number.
- Seek attention when new version has been deployed.

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -44,13 +44,12 @@
 
 {% block styles_common %}
   {{ encore_entry_link_tags('widgets-admin') }}
+  {{ encore_entry_link_tags('admin-version') }}
   {% block styles %}{% endblock %}
 {% endblock %}
 
 {% block scripts_common %}
   {{ encore_entry_script_tags('widgets-admin') }}
-  <script>
-  new CoopCycle.Changelog(document.getElementById('changelog'));
-  </script>
+  {{ encore_entry_script_tags('admin-version') }}
   {% block scripts %}{% endblock %}
 {% endblock %}
