--- a/templates/admin/nav.html.twig
+++ b/templates/admin/nav.html.twig
@@ -19,7 +19,11 @@
         <li>
           <a class="admin-navbar__link" href="{{ path('homepage') }}"><i class="fa fa-sign-out"></i>  {% trans %}adminDashboard.back.title{% endtrans %}</a>
         </li>
-        <li id="changelog"></li>
+        <li>
+          <a href="{{ coopcycle_github_release_link() }}"
+            class="text-monospace"
+            target="_blank" id="coopcycle-version">{{ coopcycle_version() }}</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li data-toggle="tooltip" data-placement="bottom" title="{% trans %}adminDashboard.tooltip.orders{% endtrans %}">
