Animation version on dispatch.

--- a/templates/admin/dashboard_iframe.html.twig
+++ b/templates/admin/dashboard_iframe.html.twig
@@ -48,8 +48,10 @@
 {% block styles %}
 {{ encore_entry_link_tags('widgets-admin') }}
 {{ encore_entry_link_tags('dashboard') }}
+{{ encore_entry_link_tags('admin-version') }}
 {% endblock %}
 
 {% block scripts %}
 {{ encore_entry_script_tags('dashboard') }}
+{{ encore_entry_script_tags('admin-version') }}
 {% endblock %}
