--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -47,7 +47,12 @@
       {% do form.rules.setRendered %}
     {% endif %}
 
-    {{ form_label(form.rules) }}
+    <div>
+      {{ form_label(form.rules) }}
+      <span id="pricing-rule-set-label">
+        {# rendered by React #}
+      </span>
+    </div>
 
     <div class="form-group" id="pricing-rule-set-header">
       {# rendered by React #}
