display price breakdown for debugging

--- a/templates/delivery/form.html.twig
+++ b/templates/delivery/form.html.twig
@@ -90,16 +90,8 @@
           </div>
 
           {% if debug_pricing is defined and debug_pricing %}
-            {% set pricingRuleSet = delivery.store.pricingRuleSet %}
-            <ul class="list-group" id="pricing-rules-debug" data-strategy="{{ pricingRuleSet.strategy }}">
-              {% for pricing_rule in pricingRuleSet.rules %}
-                <li class="list-group-item" data-pricing-rule="/api/pricing_rules/{{ pricing_rule.id }}">
-                  <span>{{ pricing_rule.expression }}</span>
-                  <span class="pull-right">
-                <i class="fa fa-spinner fa-spin hidden"></i>
-              </span>
-                </li>
-              {% endfor %}
+            <ul class="list-group" id="pricing-rules-debug">
+              {# rendered by React #}
             </ul>
           {% endif %}
 
