Add brand name to text.

--- a/templates/_partials/profile/definition_password_for_classical_users.html.twig
+++ b/templates/_partials/profile/definition_password_for_classical_users.html.twig
@@ -6,8 +6,8 @@
 
 {% block info_section %}
   <div class="info-section rounded">
-    <h5>{{ 'registration.info.title'|trans }}</h5>
-    <p>{{ 'registration.info.text'|trans }}</p>
+    <h5>{{ 'registration.info.title'|trans({'%brandName%': coopcycle_setting('brand_name') }) }}</h5>
+    <p>{{ 'registration.info.text'|trans({'%brandName%': coopcycle_setting('brand_name') }) }}</p>
     {% if businessAccountInvitation is not null and not businessAccountInvitation.isInvitationForManager %}
       <strong>{{ 'registration.info.business.account.attachment'|trans({ '%businessAccountName%': businessAccountInvitation.businessAccount.name }) }}</strong>
     {% endif %}
