clean: add y-margin on store dashboard

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -19,7 +19,7 @@
       </div>
   </section>
 {% endif %}
-<div class="container-fluid container--full-height mt-4">
+<div class="container-fluid container--full-height m-4">
   <div class="row">
     <div class="col-md-12">
       {% block content %}{% endblock %}
