--- a/js/app/foodtech/dashboard/index.scss
+++ b/js/app/foodtech/dashboard/index.scss
@@ -34,7 +34,7 @@
     }
     &__Search {
       flex: 1;
-      padding: 0 25px;
+      padding-right: 25px;
     }
     &__Slider {
       @media (max-width: $screen-xs-max) {
