fixed: price layout

--- a/templates/form/pricing_rule_set.html.twig
+++ b/templates/form/pricing_rule_set.html.twig
@@ -40,8 +40,8 @@
       {% endif %}
       >
       <div class="d-flex align-items-center">
-        {{ form_label(form.price, null, { label_attr: { class: 'delivery-pricing-ruleset__rule__price__label w-25' } }) }}
-        <div class="w-75">
+        {{ form_label(form.price, null, { label_attr: { class: 'delivery-pricing-ruleset__rule__price__label' } }) }}
+        <div class="flex-1 pl-2">
           {{ form_widget(form.price, { attr: { class: 'delivery-pricing-ruleset__rule__price__input' } }) }}
         </div>
       </div>
