--- a/templates/admin/orders.html.twig
+++ b/templates/admin/orders.html.twig
@@ -83,6 +83,7 @@
 
 {% block scripts %}
 {{ encore_entry_script_tags('admin-orders') }}
+{{ encore_entry_script_tags('delivery-map') }}
 <script>
 
 var $settingsForm = $('form[name="admin_orders_settings"]');
