remove unused label

--- a/templates/_partials/docs.html.twig
+++ b/templates/_partials/docs.html.twig
@@ -6,7 +6,7 @@
 
 {% if url is defined %}
   <a href="{{ url }}" target="_blank"
-     rel="noopener noreferrer">{{ 'docs.label'|trans }} <i
+     rel="noopener noreferrer">{{ 'visitDocumentation.label'|trans }} <i
       class="fa fa-external-link"></i></a>
 {% endif %}
 
