refact: move MapPicker in it own component and improve triggerd method

--- a/assets/css/address-autosuggest.scss
+++ b/assets/css/address-autosuggest.scss
@@ -64,8 +64,7 @@
 
     &__footer {
       display: none;
-      justify-content: flex-end;
-      padding: 4px;
+      padding: 5px 7px;
 
       img {
         display: inline-block;
