Use new route names.

--- a/templates/admin/package_sets.html.twig
+++ b/templates/admin/package_sets.html.twig
@@ -38,7 +38,7 @@
         {{ packages|join(', ') }}
       </td>
       <td>
-        <div {{ react_component('ShowApplications', { objectId: package_set.id, data: relatedEntitiesByPackageSetId[package_set.id], fetchUrl: "api_package_sets_applications_item" }) }}></div>
+        <div {{ react_component('ShowApplications', { objectId: package_set.id, data: relatedEntitiesByPackageSetId[package_set.id], fetchUrl: "_api_/package_sets/{id}.{_format}_delete" }) }}></div>
       </td>
       {% if is_granted('ROLE_ADMIN') %}
         <td>
