--- a/templates/_partials/restaurant/list.html.twig
+++ b/templates/_partials/restaurant/list.html.twig
@@ -58,7 +58,7 @@
         </td>
         {% if is_granted('ROLE_ADMIN') %}
           <td width="5%" class="text-center">
-            <div {{ react_component('DeleteIcon', { objectId: restaurant.id, objectName: restaurant.name, deleteUrl: 'api_restaurants_delete_item'}) }}>
+            <div {{ react_component('DeleteIcon', { objectId: restaurant.id, objectName: restaurant.name, deleteUrl: '_api_/restaurants/{id}.{_format}_delete '}) }}>
           </td>
         {% endif %}
       </tr>
