--- a/templates/admin/package_set.html.twig
+++ b/templates/admin/package_set.html.twig
@@ -15,7 +15,7 @@
 {% block content %}
 {% set package_set = form.vars.value %}
 {% if package_set.id is not null %}
-  <div {{ react_component('ShowApplications', { 'objectId': package_set.id, fetchUrl: 'api_package_sets_applications_item' }) }}>
+  <div {{ react_component('ShowApplications', { 'objectId': package_set.id, fetchUrl: '_api_/package_sets/{id}/applications_get' }) }}>
     <span class="loader loader--dark"></span>
   </div>
   <hr />
