--- a/templates/admin/pricing_rule_set.html.twig
+++ b/templates/admin/pricing_rule_set.html.twig
@@ -27,7 +27,7 @@
     {{ form_errors(form) }}
 
     {% if pricing_rule_set.id %}
-      <div {{ react_component('ShowApplications', { 'objectId': pricing_rule_set.id, fetchUrl: 'api_pricing_rule_sets_applications_item' }) }}>
+      <div {{ react_component('ShowApplications', { 'objectId': pricing_rule_set.id, fetchUrl: '_api_/pricing_rule_sets/{id}/applications_get' }) }}>
         {# server side rendered content; will be replaced by react #}
         <span class="loader loader--dark"></span>
       </div>
