Fix CSS warnings.

--- a/assets/css/modals.scss
+++ b/assets/css/modals.scss
@@ -114,7 +114,7 @@
 .ReactModal__Content__buttons {
   display: flex;
   flex-wrap: wrap;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 0.5rem;
 }
 
