--- a/templates/restaurant/products.html.twig
+++ b/templates/restaurant/products.html.twig
@@ -8,6 +8,11 @@
 
 {% block content %}
 <p class="text-right">
+  {% if is_granted('ROLE_ADMIN') %}
+  <a href="#" class="btn btn-success mr-2" data-toggle="modal" data-target="#products-copy-modal">
+    <i class="fa fa-clone"></i> {% trans %}basics.copy{% endtrans %}
+  </a>
+  {% endif %}
   <a href="#" class="btn btn-success mr-2" data-toggle="modal" data-target="#products-import-modal">
     <i class="fa fa-upload"></i> {% trans %}basics.import{% endtrans %}
   </a>
@@ -77,6 +82,26 @@
     </div>
   </div>
 </div>
+
+{% if is_granted('ROLE_ADMIN') %}
+<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="products-copy-modal-label" id="products-copy-modal">
+  <div class="modal-dialog" role="document">
+    {{ form_start(copy_form, { attr: { class: 'modal-content' } }) }}
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="products-copy-modal-label">{% trans %}basics.copy{% endtrans %}</h4>
+      </div>
+      <div class="modal-body">
+        {{ form_widget(copy_form) }}
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-success" >{% trans %}basics.copy{% endtrans %}</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}basics.cancel{% endtrans %}</button>
+      </div>
+    {{ form_end(copy_form) }}
+  </div>
+</div>
+{% endif %}
 
 {% endblock %}
 
