enable Stores page for dispatcher

--- a/templates/admin/_partials/deliveries_nav.html.twig
+++ b/templates/admin/_partials/deliveries_nav.html.twig
@@ -13,7 +13,7 @@
     path: path('admin_stores'),
     icon: 'shopping-cart',
     active: ['admin_stores'],
-    enabled: is_granted('ROLE_ADMIN'),
+    enabled: is_granted('ROLE_DISPATCHER'),
   },
   {
     title: 'adminDashboard.incidents.title' | trans,
