--- a/templates/order/item.html.twig
+++ b/templates/order/item.html.twig
@@ -13,15 +13,20 @@
   {% if is_granted('ROLE_DISPATCHER') %}
     {% if delivery is not empty %}
       {% set store = delivery.store %}
-      {% if store is not null %}
-        <li><a href="{{ path('admin_stores') }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
-        <li><a href="{{ path('admin_store', { id: store.id }) }}">{{ store.name }}</a></li>
-      {% endif %}
+    {% else %}
+      {% set store = null %}
     {% endif %}
-    {# TODO: display properly the restaurant(s) for foodtech orders #}
 
-    <li><a href="{{ path('admin_orders') }}">{% trans %}adminDashboard.orders.title{% endtrans %}</a></li>
-    <li>{{ order.number }}</li>
+    {% if store is not null %}
+      <li><a href="{{ path('admin_stores') }}">{% trans %}adminDashboard.stores.title{% endtrans %}</a></li>
+      <li><a href="{{ path('admin_store', { id: store.id }) }}">{{ store.name }}</a></li>
+      <li><a href="{{ path('admin_store_deliveries', { id: store.id }) }}">{% trans %}stores.deliveries{% endtrans %}</a></li>
+      <li>{{ order.number }}</li>
+    {% else %}
+      {# TODO: display properly the restaurant(s) for foodtech orders #}
+      <li><a href="{{ path('admin_orders') }}">{% trans %}adminDashboard.orders.title{% endtrans %}</a></li>
+      <li>{{ order.number }}</li>
+    {% endif %}
   {% endif %}
 
 {% endblock %}
