--- a/assets/css/modals.scss
+++ b/assets/css/modals.scss
@@ -87,6 +87,11 @@
   z-index: 1001;
 }
 
+.ReactModal__Overlay--zIndex-2001 {
+  // For example, could be used to put the modal *ABOVE* the addesss suggestions (z-index: 2000)
+  z-index: 2001;
+}
+
 .ReactModal__Content {
   position: absolute;
   top: 50%;
