updated legacy form tests

--- a/templates/order/_partials/navbar.html.twig
+++ b/templates/order/_partials/navbar.html.twig
@@ -28,7 +28,7 @@
       <div class="nav navbar-nav navbar-right">
         {% if is_granted('ROLE_DISPATCHER') and order.isDeliveryForStore() %}
           <li>
-            <a href="{{ path('admin_order_edit', { id: order.id }) }}">
+            <a href="{{ path('admin_order_edit', { id: order.id }) }}" data-testid="order-edit">
               <i class="fa fa-pencil"></i>  {% trans %}basics.edit{% endtrans %}
             </a>
           </li>
