--- a/templates/restaurant/index.html.twig
+++ b/templates/restaurant/index.html.twig
@@ -241,7 +241,7 @@
   data-is-group-orders-enabled="{{ group_orders_enabled|json_encode|e('html_attr') }}"></div>
 
 <div id="js-addresses-data"
-  data-addresses="{{ addresses_normalized|json_encode|e('html_attr') }}"></div>
+  data-addresses="{{ addresses_normalized()|json_encode|e('html_attr') }}"></div>
 
 <div id="js-loopeat"
   data-context="{{ loopeat_context|json_encode|e('html_attr') }}"></div>
