--- a/templates/_partials/recurrence_rule/list.html.twig
+++ b/templates/_partials/recurrence_rule/list.html.twig
@@ -15,7 +15,7 @@
       {% set templateDelivery = item.templateDelivery %}
       {% set templateOrder = item.templateOrder %}
 
-      <tr data-testid="recurrence_rule__list_item">
+      <tr data-testid="recurrence-list-item">
         <td>
           <ul class="list-unstyled">
             {% for task in templateTasks %}
@@ -88,7 +88,8 @@
               class="text-muted">{% trans %}recurrence_rule.legacy{% endtrans %}</span>
           {% else %}
             <a
-              href="{{ path(routes.view, { storeId: store.id, recurrenceRuleId: recurrenceRule.id }) }}">{{ 'basics.edit'|trans }}</a>
+              href="{{ path(routes.view, { storeId: store.id, recurrenceRuleId: recurrenceRule.id }) }}"
+              data-testid="recurrence-edit">{{ 'basics.edit'|trans }}</a>
           {% endif %}
         </td>
       </tr>
